[package]
name = "memory_map"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["map", "memory", "tag", "areas"]
description = "memory map tag and areas helpers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-memory_map.git"
homepage = "https://github.com/nathanfaucett/rs-memory_map"
