[package]
name = "memory_area"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["memory", "areas"]
description = "memory area"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-memory_area.git"
homepage = "https://github.com/nathanfaucett/rs-memory_area"
